@@ -1,3 +1,6 @@
+22 January 2008: Matthijs
+	- Add configuration for chkconfig to control nsd service (bug 164)
+
 15 January 2008: Matthijs
 	- Fixed bug 157 where nsd would return FORMERR if edns query is
 	  received with version set to zero and rdlen is larger than zero.
